MYB-1101 Change version numbers and dependencies to move dev branch to post-1.0.2 OAE

--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -3,15 +3,15 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.2</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
   <name>MyBerkeley executable</name>
-  <version>1.0.2</version>
+  <version>1.1-SNAPSHOT</version>
   <properties>
-    <nakamura.version>1.0.2</nakamura.version>
+    <nakamura.version>1.1-SNAPSHOT</nakamura.version>
   </properties>
   <packaging>jar</packaging>
   <build>
@@ -24,7 +24,7 @@
       <plugin>
         <groupId>org.apache.sling</groupId>
         <artifactId>maven-launchpad-plugin</artifactId>
-        <version>2.0.10</version>
+        <version>2.1.0</version>
         <configuration>
           <defaultBundleList>
             <groupId>org.sakaiproject.nakamura</groupId>
@@ -41,7 +41,7 @@
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.ojdbc5</artifactId>
-              <version>1.0.2</version>
+              <version>1.1-SNAPSHOT</version>
               <startLevel>1</startLevel>
             </bundle>
             <bundle>
@@ -59,7 +59,7 @@
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
-              <version>1.0.2</version>
+              <version>1.1-SNAPSHOT</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
@@ -71,19 +71,19 @@
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
-              <version>1.0.2</version>
+              <version>1.1-SNAPSHOT</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
-              <version>1.0.2</version>
+              <version>1.1-SNAPSHOT</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.notifications</artifactId>
-              <version>1.0.2</version>
+              <version>1.1-SNAPSHOT</version>
               <startLevel>30</startLevel>
             </bundle>
             <!-- MYB-597 -->
