--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.2</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
   <name>MyBerkeley CalDAV Connector bundle</name>
-  <version>1.0.2</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <build>
     <plugins>
@@ -98,9 +98,21 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.commons.json</artifactId>
+    </dependency>
+    <dependency>
           <groupId>org.apache.sling</groupId>
           <artifactId>org.apache.sling.commons.osgi</artifactId>
           <version>2.0.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.servlets.post</artifactId>
     </dependency>
 
       <!-- jcr -->
@@ -136,7 +148,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.testutils</artifactId>
-      <version>1.0.2</version>
+      <version>1.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
