--- a/dynamiclist/pom.xml
+++ b/dynamiclist/pom.xml
@@ -2,13 +2,13 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.2</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
   <name>MyBerkeley Dynamic List bundle</name>
-  <version>1.0.2</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <build>
     <plugins>
@@ -46,6 +46,14 @@
 <!-- Sling -->
     <dependency>
       <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.jcr.resource</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.commons.json</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.servlets.post</artifactId>
     </dependency>
     <dependency>
@@ -73,8 +81,8 @@
 
 <!-- commons -->
     <dependency>
-      <groupId>com.google.collections</groupId>
-      <artifactId>google-collections</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
 
 <!-- logging -->
