--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.2</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.integration</artifactId>
   <name>MyBerkeley integration runner and data loader</name>
-  <version>1.0.2</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <properties>
    <sling.include.nakamura>${project.parent.basedir}/working/sling/nakamura.properties</sling.include.nakamura> <!-- the default location -->
@@ -174,7 +174,7 @@
               <artifactItem>
                 <groupId>org.sakaiproject.nakamura</groupId>
                 <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
-                <version>1.0.2</version>
+                <version>1.1-SNAPSHOT</version>
                 <outputDirectory>${project.build.directory}/ux</outputDirectory>
               </artifactItem>
             </artifactItems>
@@ -195,7 +195,7 @@
             </execution>
           </executions>
           <configuration>
-            <bundleFileName>${project.build.directory}/ux/org.sakaiproject.nakamura.uxloader-myberkeley-1.0.2.jar</bundleFileName>
+            <bundleFileName>${project.build.directory}/ux/org.sakaiproject.nakamura.uxloader-myberkeley-1.1-SNAPSHOT.jar</bundleFileName>
           </configuration>
         </plugin>
       </plugins>
@@ -204,7 +204,7 @@
   <!--
     After the migration completes, delete the migrators bundle
     from the "load" directory:
-      rm working/load/edu.berkeley.myberkeley.migrators-1.0.2.jar
+      rm working/load/edu.berkeley.myberkeley.migrators-1.1-SNAPSHOT.jar
   -->
   <profile>
     <id>migrate</id>
@@ -237,7 +237,7 @@
       <dependency>
         <groupId>edu.berkeley.myberkeley</groupId>
         <artifactId>edu.berkeley.myberkeley.migrators</artifactId>
-        <version>1.0.2</version>
+        <version>1.1-SNAPSHOT</version>
         <scope>runtime</scope>
       </dependency>
     </dependencies>
@@ -260,7 +260,7 @@
             <artifactItem>
             <groupId>org.sakaiproject.nakamura</groupId>
             <artifactId>org.sakaiproject.nakamura.testscripts</artifactId>
-            <version>1.0.2</version>
+            <version>1.1-SNAPSHOT</version>
             <outputDirectory>${project.build.directory}/nakamura-testscripts</outputDirectory>
             </artifactItem>
           </artifactItems>
@@ -352,7 +352,7 @@
     <dependency>
       <groupId>edu.berkeley.myberkeley</groupId>
       <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
-      <version>1.0.2</version>
+      <version>1.1-SNAPSHOT</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
