--- a/migrators/pom.xml
+++ b/migrators/pom.xml
@@ -16,11 +16,11 @@
   <parent>
     <groupId>edu.berkeley.myberkeley</groupId>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
-    <version>1.0.2</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>edu.berkeley.myberkeley.migrators</artifactId>
   <packaging>bundle</packaging>
-  <version>1.0.2</version>
+  <version>1.1-SNAPSHOT</version>
   <name>MyBerkeley: Migrators</name>
   <description>Bundle of components that will convert old content to new schemas.</description>
   <build>
