--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
             <dependency>
               <groupId>org.slf4j</groupId>
               <artifactId>slf4j-simple</artifactId>
-              <version>1.5.2</version>
+              <version>1.6.3</version>
             </dependency>
           </dependencies>
           <executions>
@@ -237,7 +237,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.9</version>
+          <version>2.10</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -288,19 +288,25 @@
       <dependency>
         <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.api</artifactId>
-        <version>2.1.0</version>
+        <version>2.2.2</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.commons.json</artifactId>
-        <version>2.0.5-20110812</version>
+        <version>2.0.6</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>org.apache.sling.commons.osgi</artifactId>
+        <version>2.1.0</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.jcr.resource</artifactId>
-        <version>2.0.7-20100823</version>
+        <version>2.0.10</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -336,19 +342,19 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.5.10</version>
+        <version>1.6.3</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.4</version>
+        <version>4.10</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
-        <version>1.5.10</version>
+        <version>1.6.3</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
