MYB-1152 Support SakaiDocs larger than 64K

--- a/scripts/mysql/JDBCStorageClientPool.config
+++ b/scripts/mysql/JDBCStorageClientPool.config
@@ -3,3 +3,4 @@ jdbc-driver="com.mysql.jdbc.Driver"
 jdbc-url="jdbc:mysql://localhost/nakamura?autoReconnectForPools=true"
 password="ironchef"
 username="sakaiuser"
+long-string-size=I"64000"
