--- a/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -1,6 +1,3 @@
-trusted.hosts=["http://localhost:8080","http://calcentral-dev.berkeley.edu","http://calcentral-dev.berkeley.edu:80","http://calcentral-dev.berkeley.edu:8080","https://calcentral-dev.berkeley.edu"]
+trusted.hosts=["localhost:8080\ \=\ http://localhost:8082","calcentral-dev.berkeley.edu:80\ \=\ https://calcentral-dev.berkeley.edu:9443"]
 trusted.postwhitelist=["/system"]
-trusted.referer=["/","http://localhost:8080","http://calcentral-dev.berkeley.edu","http://calcentral-dev.berkeley.edu:80","http://calcentral-dev.berkeley.edu:8080","https://calcentral-dev.berkeley.edu"]
-untrusted.contenturl="http://calcentral-dev.berkeley.edu:9443"
-untrusted.redirect.host="https://calcentral-dev.berkeley.edu:9443"
 trusted.secret="SHARED_SECRET"
