MYB-1153 Specifying port 80 in the new Server Protection Service results in no protection whatsoever (and no error message)

--- a/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -1,3 +1,3 @@
-trusted.hosts=["localhost:8080\ \=\ http://localhost:8082","calcentral-dev.berkeley.edu:80\ \=\ https://calcentral-dev.berkeley.edu:9443"]
+trusted.hosts=["localhost:8080\ \=\ http://localhost:8082","calcentral-dev.berkeley.edu\ \=\ https://calcentral-dev.berkeley.edu:9443"]
 trusted.postwhitelist=["/system"]
 trusted.secret="SHARED_SECRET"
