MYB-1154 JDBC configuration not honored. It looks as though the config format has gotten pickier.

--- a/scripts/mysql/JDBCStorageClientPool.config
+++ b/scripts/mysql/JDBCStorageClientPool.config
@@ -1,6 +1,6 @@
 service.pid="org.sakaiproject.nakamura.lite.storage.jdbc.JDBCStorageClientPool"
 jdbc-driver="com.mysql.jdbc.Driver"
-jdbc-url="jdbc:mysql://localhost/nakamura?autoReconnectForPools=true"
-password="ironchef"
+jdbc-url="jdbc:mysql://localhost/nakamura?autoReconnectForPools\=true"
 username="sakaiuser"
+password="ironchef"
 long-string-size=I"64000"
