MYB-527 - adding missing config parameter for hybrid

--- a/configs/dev/load/org.sakaiproject.nakamura.auth.trusted.TrustedTokenServiceImpl.cfg
+++ b/configs/dev/load/org.sakaiproject.nakamura.auth.trusted.TrustedTokenServiceImpl.cfg
@@ -1,2 +1,3 @@
 sakai.auth.trusted.token.ttl=3600000
 sakai.auth.trusted.server.secret=default-setting-change-before-use #generate this per environment
+sakai.auth.trusted.server.safe-hostsaddress=localhost;127.0.0.1;0:0:0:0:0:0:0:1%0;128.32.143.109 #sakai-dev.berkeley.edu
