--- a/configs/dev/load/org.sakaiproject.nakamura.proxy.TrustedLoginTokenProxyPreProcessor.cfg
+++ b/configs/dev/load/org.sakaiproject.nakamura.proxy.TrustedLoginTokenProxyPreProcessor.cfg
@@ -1,3 +1,3 @@
 port=80
-hostname=sakai-dev.berkley.edu
+hostname=sakai-dev.berkeley.edu
 sharedSecret=default-setting-change-before-use #generate this per environment
