--- a/configs/dev/load/org.sakaiproject.nakamura.auth.cas.CasAuthenticationHandler.cfg
+++ b/configs/dev/load/org.sakaiproject.nakamura.auth.cas.CasAuthenticationHandler.cfg
@@ -4,5 +4,6 @@ sakai.auth.cas.url.server=https://auth-test.berkeley.edu/cas
 sakai.auth.cas.url.login=https://auth-test.berkeley.edu/cas/login
 sakai.auth.cas.url.logout=https://auth-test.berkeley.edu/cas/logout?url=https://calcentral-dev.berkeley.edu
 sakai.auth.cas.prop.proxy=true
+sakai.auth.cas.prop.renew=true
 # The path that this handler should do auth for
 path=/
