MYB-1042 MYB-1063 Person provisioning, self-registration - Foreign Principal encryption key and Oracle connection must both be configured to enable self-registration. - Administrative access to Oracle user account provision is supported even if Foreign Principal service is disabled. - If neither Oracle nor Foreign Principals are enabled, then parameter-based user account provision is still available.

--- a/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -1,3 +1,4 @@
 trusted.hosts=["localhost:8080\ \=\ http://localhost:8082","calcentral-dev.berkeley.edu\ \=\ https://calcentral-dev.berkeley.edu:9443"]
 trusted.postwhitelist=["/system"]
 trusted.secret="SHARED_SECRET"
+trusted.anonpostwhitelist=["/system/userManager/user.create","/system/batch","/system/myberkeley/selfProvision"]
