--- a/configs/prod/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/prod/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -4,3 +4,4 @@ trusted.referer=["/","http://localhost:8080","http://calcentral.berkeley.edu","h
 untrusted.contenturl="http://calcentral.berkeley.edu:9443"
 untrusted.redirect.host="https://calcentral.berkeley.edu:9443"
 trusted.secret="SHARED_SECRET"
+trusted.anonpostwhitelist=["/system/userManager/user.create","/system/batch","/system/myberkeley/selfProvision"]
