--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <module>notifications</module>
         <module>migrators</module>
         <module>ojdbc6</module>
+        <module>provision</module>
+        <module>foreignprincipal</module>
       </modules>
     </profile>
     <profile>
