--- a/configs/localhost/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/localhost/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -1,2 +1,1 @@
-trusted.postwhitelist=["/system"]
-trusted.secret="SHARED_SECRET"
+trusted.anonpostwhitelist=["/system/userManager/user.create","/system/batch","/system/myberkeley/selfProvision"]
