--- a/foreignprincipal/pom.xml
+++ b/foreignprincipal/pom.xml
@@ -42,7 +42,15 @@
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
-      <artifactId>org.sakaiproject.nakamura.solr-myberkeley</artifactId>
+      <artifactId>org.sakaiproject.nakamura.solr</artifactId>
+    </dependency>
+     <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.commons.osgi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.sling</groupId>
