--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -89,7 +89,7 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.nakamura</groupId>
-            <artifactId>org.sakaiproject.nakamura.solr-myberkeley</artifactId>
+            <artifactId>org.sakaiproject.nakamura.solr</artifactId>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.nakamura</groupId>
@@ -184,6 +184,14 @@
         <version>2.1.1</version>
         <scope>provided</scope>
       </dependency>
+        <dependency>
+          <groupId>org.apache.sling</groupId>
+          <artifactId>org.apache.sling.api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.sling</groupId>
+          <artifactId>org.apache.sling.jcr.api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.json</artifactId>
