--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,12 @@
       </dependency>
       <dependency>
         <groupId>org.apache.sling</groupId>
+        <artifactId>org.apache.sling.jcr.api</artifactId>
+        <version>2.1.0</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.jcr.resource</artifactId>
         <version>2.0.10</version>
         <scope>provided</scope>
@@ -373,7 +379,7 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.core</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>1.3</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -384,8 +390,8 @@
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
-        <artifactId>org.sakaiproject.nakamura.solr-myberkeley</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <artifactId>org.sakaiproject.nakamura.solr</artifactId>
+        <version>1.3-20111212</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
