--- a/dynamiclist/pom.xml
+++ b/dynamiclist/pom.xml
@@ -40,6 +40,10 @@
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.solr</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.user</artifactId>
+    </dependency>
 
 <!-- Sling -->
     <dependency>
