--- a/ojdbc6/pom.xml
+++ b/ojdbc6/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>edu.berkeley.myberkeley.ojdbc6</artifactId>
