--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.base</artifactId>
   <packaging>pom</packaging>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
   <name>MyBerkeley</name>
   <url>http://ets.berkeley.edu/</url>
   <issueManagement>
@@ -385,7 +385,13 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.nakamura</groupId>
+        <artifactId>org.sakaiproject.nakamura.profile.api</artifactId>
+        <version>1.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -397,7 +403,7 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.user</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
