--- a/configs/qa/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/qa/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -1,7 +1,4 @@
-trusted.hosts=["http://localhost:8080","http://calcentral-qa.berkeley.edu","http://calcentral-qa.berkeley.edu:80","http://calcentral-qa.berkeley.edu:8080","https://calcentral-qa.berkeley.edu"]
+trusted.hosts=["localhost:8080\ \=\ http://localhost:8082","calcentral-qa.berkeley.edu\ \=\ https://calcentral-qa.berkeley.edu:9443"]
 trusted.postwhitelist=["/system"]
-trusted.referer=["/","http://localhost:8080","http://calcentral-qa.berkeley.edu","http://calcentral-qa.berkeley.edu:80","http://calcentral-qa.berkeley.edu:8080","https://calcentral-qa.berkeley.edu"]
-untrusted.contenturl="http://calcentral-qa.berkeley.edu:9443"
-untrusted.redirect.host="https://calcentral-qa.berkeley.edu:9443"
 trusted.secret="SHARED_SECRET"
 trusted.anonpostwhitelist=["/system/userManager/user.create","/system/batch","/system/myberkeley/selfProvision"]
