--- a/dynamiclist/pom.xml
+++ b/dynamiclist/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
