--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>edu.berkeley.myberkeley.integration</artifactId>
@@ -172,7 +172,7 @@
               <artifactItem>
                 <groupId>org.sakaiproject.nakamura</groupId>
                 <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
-                <version>1.1</version>
+                <version>1.2-SNAPSHOT</version>
                 <outputDirectory>${project.build.directory}/ux</outputDirectory>
               </artifactItem>
             </artifactItems>
@@ -193,7 +193,7 @@
             </execution>
           </executions>
           <configuration>
-            <bundleFileName>${project.build.directory}/ux/org.sakaiproject.nakamura.uxloader-myberkeley-1.1.jar</bundleFileName>
+            <bundleFileName>${project.build.directory}/ux/org.sakaiproject.nakamura.uxloader-myberkeley-1.2-SNAPSHOT.jar</bundleFileName>
           </configuration>
         </plugin>
       </plugins>
@@ -202,7 +202,7 @@
   <!--
     After the migration completes, delete the migrators bundle
     from the "load" directory:
-      rm working/load/edu.berkeley.myberkeley.migrators-1.1.jar
+      rm working/load/edu.berkeley.myberkeley.migrators-1.2-SNAPSHOT.jar
   -->
   <profile>
     <id>migrate</id>
@@ -235,7 +235,7 @@
       <dependency>
         <groupId>edu.berkeley.myberkeley</groupId>
         <artifactId>edu.berkeley.myberkeley.migrators</artifactId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
         <scope>runtime</scope>
       </dependency>
     </dependencies>
@@ -327,7 +327,7 @@
     <dependency>
       <groupId>edu.berkeley.myberkeley</groupId>
       <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
-      <version>1.1</version>
+      <version>1.2-SNAPSHOT</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
