--- a/migrators/pom.xml
+++ b/migrators/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>edu.berkeley.myberkeley</groupId>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
   <artifactId>edu.berkeley.myberkeley.migrators</artifactId>
   <packaging>bundle</packaging>
