--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>edu.berkeley.myberkeley.base</artifactId>
         <groupId>edu.berkeley.myberkeley</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>edu.berkeley.myberkeley.notifications</artifactId>
@@ -164,14 +164,14 @@
         <dependency>
             <groupId>edu.berkeley.myberkeley</groupId>
             <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>edu.berkeley.myberkeley</groupId>
             <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
