--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -145,7 +145,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.testutils</artifactId>
-      <version>1.1</version>
+      <version>1.2-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
