--- a/pom.xml
+++ b/pom.xml
@@ -385,13 +385,13 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.profile.api</artifactId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -403,7 +403,7 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.user</artifactId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
