--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -39,7 +39,7 @@
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.ojdbc6</artifactId>
-              <version>1.2-SNAPSHOT</version>
+              <version>${project.version}</version>
               <startLevel>1</startLevel>
             </bundle>
             <bundle>
@@ -63,31 +63,31 @@
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
-              <version>1.2-SNAPSHOT</version>
+              <version>${project.version}</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
-              <version>1.2-SNAPSHOT</version>
+              <version>${project.version}</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.notifications</artifactId>
-              <version>1.2-SNAPSHOT</version>
+              <version>${project.version}</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.foreignprincipal</artifactId>
-              <version>1.2-SNAPSHOT</version>
+              <version>${project.version}</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.provision</artifactId>
-              <version>1.2-SNAPSHOT</version>
+              <version>${project.version}</version>
               <startLevel>30</startLevel>
             </bundle>
             <!-- MYB-597 -->
