MYB-1465 Build and configure Solr server directory Apache Solr does not deploy built versions of the "solr/example" folder used as a Solr directory starting point.

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
        </plugins>
       </build>
     </profile>
+    <profile>
+      <id>solrjar</id>
+      <modules>
+        <module>solrjar</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>solr</id>
+      <modules>
+        <module>solrserver</module>
+      </modules>
+    </profile>
   </profiles>
   <repositories>
     <repository>
