MYB-1465 Get the stop-solr.sh script past .gitignore

--- a/solrserver/pom.xml
+++ b/solrserver/pom.xml
@@ -97,7 +97,7 @@
             <goals><goal>run</goal></goals>
             <configuration>
               <target if="stop.solr">
-                <exec executable="${basedir}/src/main/bin/stop-solr.sh"/>
+                <exec executable="${basedir}/src/main/scripts/stop-solr.sh"/>
               </target>
             </configuration>
           </execution>
