NOJIRA Align CalCentral with OAE 1.2.0 release

--- a/foreignprincipal/pom.xml
+++ b/foreignprincipal/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.jetty-config</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>1.2.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
