--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -162,7 +162,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.testutils</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>1.2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
