--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
   <name>MyBerkeley executable</name>
   <properties>
-    <nakamura.version>1.2-SNAPSHOT</nakamura.version>
+    <nakamura.version>1.2.0</nakamura.version>
   </properties>
   <packaging>jar</packaging>
   <build>
